# PyC

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Architecture.md  CMakeLists.txt  CONTRIBUTING.md  Doc.md  README.md  REPO_RULES.md  Result.md  SECURITY.md  SUPPORT.md  app.js  index.html  pyproject.toml  results-insights.html  styles.css
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  deploy-site.yml  release-binaries.yml
AI/: ai_bridge.c  graph_compiler.c  memory_planner.c  optimizer.c  visualizer.c
C_Files/: Core.cpp  IR.c  codegen.c  error_handler.c  frontend.c  main.c  parser.c  parser.cu  parser.cuh  stack.c  symbol_table.c  test_parser.c
Core/C_Files/: Core.cpp  IR.c  adapter.c  api.c  backend.c  codegen.c  error_handler.c  frontend.c  ir_generator.c  lexer.c  main.c  parser.c  semantic.c  stack.c  symbol_table.c  test_parser.c
Core/Header_Files/: Core.h  ai_integration.h  api.h  backend.h  error_handler.h  frontend.h  graph.h  graph_compiler.h  ir_generator.h  lexer.h  memory_planner.h  parser.h  semantic.h  stack.h  symbol_table.h
Examples/: matrix_mult.py  simple_graph.py
Header_Files/: Core.h  backend.h  error_handler.h  frontend.h  lexer.h  parser.h  stack.h
Kernel/: kernel.cu  kernel_lab.py  matrix_mult.cu
Kernel/lab/: kernels.json
benchmark/: benchmark.c  harness.py  run_all.sh
benchmark/baselines/: ubuntu-latest.json
benchmark/benchmarks/: README.md  run_suite.sh
benchmark/results/: latest.json  latest.md
benchmark/runners/: run_glow.sh  run_pyc.sh  run_tvm.sh  run_xla.sh
benchmark/tools/: Visualize.py  analyze_ada_gemm_results.py  analyze_hopper_gemm_results.py  check_regression.py  measure.py  measure_mem.py  render_kernel_lab_svg.py  render_latest_svg.py  render_ncu_stall_flamegraph.py
benchmark/workloads/: AI_model.py  core_microbench.c  cuda_kernal.cu  script.py
compiler/: CMakeLists.txt  compiler_api.c
compiler/cutlass_kernels/: CMakeLists.txt  cutlass_attention.cu  cutlass_conv2d.cu  cutlass_gemm.cu  cutlass_registry_init.cu
compiler/ir/: ir.c
compiler/passes/: pass_manager.c
compiler/runtime/: comm_backend_invalid.c  comm_backend_loader.c  comm_backend_mpi.c  comm_backend_rccl.c  comm_backend_stub.c  cuda_backend.c  distributed_runtime.c  kernel_registry.c  runtime_allocator.c  runtime_control.c
docs/: Architecture.md  Doc.md  README.md  Result.md  benchmarking.md  build-and-ci.md  perf-report.md  performance-results.md  project-status.md  results.md
docs/Spec's/: distributed_training_operational_blocks.md  distributed_training_spec.md
docs/architecture/: system-architecture.md
docs/compiler-next/: benchmark-protocol.md  compile-runtime-reliability-spec.md  cuda-gemm-fast-path.md  gpu-testing-playbook.md  innovation-backlog.md  ir-spec.md  kernel-lab.md  kernel-optimization-playbook.md  overview.md  pass-pipeline.md  phantom-graph-rationale.md  production-readiness.md  rd-landscape.md  roadmap-phases.md  runtime-integration-spec.md  runtime-memory-planner.md
docs/contracts/: core_ai_interfaces.md
docs/downloads/: app.js  index.html  styles.css
docs/milestones/: v0_operational.md  v1_ai_optimization_integration.md
docs/plans/: ada-kernel-prototype-plan.md  compiler-next-feature-buildout.md  hopper-45tflops-next-loop.md  hopper-gap-close-path.md  hopper-ops-kernel-blueprint.md  repo-streamline-plan.md
docs/reference/: benchmarking.md  build-and-ci.md  project-overview.md  repository-rules.md
hello/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  xref-hello.html
inference-site/: index.html  inference.css  inference.js  manifest.json
infra/: README.md  bootstrap_gpu_box.sh  build_bootstrap_image.sh  build_distributed_module.sh  resume_gpu_box.sh  run_bootstrap_image.sh  run_nexa_insight.sh  run_nexa_insight_local_tui.sh  run_nexa_insight_tui.sh  teardown_node.py  tmux_keepalive.sh  verify_gpu_env.sh
runtime/: CMakeLists.txt
runtime/vortex_core/: Cargo.toml  build.rs
runtime/vortex_core/src/: allocator.rs  cpu_dispatch.rs  errors.rs  hw_profile.rs  pipeline.rs  telemetry.rs
runtime/vortex_core/src/ffi/: pyc_wrapper.h
runtime/vortex_core/src/integrations/: mesocarp_wrapper.rs
scripts/: build_cutlass_harness_remote.sh  install_tmux_keepalive_remote.sh  launch_hopper_long_tmux.sh  live_run_dashboard.py  migrate_sources.sh  preflight_qwen_sft.py  publish_site_results.py  pull_and_analyze_ada_artifacts.sh  run_hopper_optimization_loop.py  run_pyc_bench_pretty.sh  run_qwen14b_opencodeinstruct.sh  run_train_campaign.sh  setup_benchmark_env_locked.sh  setup_cuda_remote_ubuntu.sh  setup_hopper_benchmark_remote.sh  setup_tvm_cuda_remote_ubuntu.sh  standardize_benchmark_results.py  standardize_kernel_lab_results.py  standardize_remote_results.py  train.py  train_sft.py  train_sft_lib.py
src/compiler/: CMakeLists.txt  compiler_api.c
src/compiler/cutlass_kernels/: CMakeLists.txt
src/compiler/cutlass_kernels/attention/: kernel.cu
src/compiler/cutlass_kernels/conv2d/: kernel.cu
src/compiler/cutlass_kernels/gemm/: ada_async_kernel.cu  dispatch_registry.cu  kernel.cu
src/compiler/cutlass_kernels/registry/: init.cu
src/compiler/passes/: pass_manager.c
src/compiler/runtime/: comm_backend_loader.c  comm_backend_nccl.c  cuda_backend.c  kernel_registry.c  runtime_allocator.c  runtime_control.c
src/runtime/: CMakeLists.txt  Cargo.toml
src/runtime/vortex_core/: Cargo.toml  build.rs
src/runtime/vortex_core/src/: allocator.rs  cpu_dispatch.rs  hw_profile.rs  lib.rs  pipeline.rs
src/runtime/vortex_core/src/ffi/: mod.rs
src/runtime/vortex_core/src/integrations/: mod.rs
tests/: README.md  test_ada_analysis_bundle.py  test_bench_pyc_cmd.py  test_benchmark_gpu_arena.py  test_benchmark_gpu_glow.py  test_hopper_analysis_bundle.py  test_kernel_lab_task_builder.py  test_nexa_insight_observer.py  test_nexa_insight_parser.py  test_pyc_bench_sequence.py  test_run_pyc_bench_pretty.py  test_train_sft_helpers.py  validate_cmake_sources.py  validate_repo_layout.py
(+284 files in other folders)
