[package]
name = "vortex_core"
version = "0.1.0"
edition = "2021"
description = "PyC unified HPC runtime — async dispatch, NUMA memory, hardware profiling"

[lib]
name = "vortex_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio          = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"

# Python bindings (optional — for direct Python SDK use)
pyo3           = { version = "0.21", features = ["extension-module"], optional = true }

# Serialization / telemetry
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
chrono         = "0.4"

# Hardware detection
sysinfo        = "0.30"
num_cpus       = "1.16"

# Error handling
thiserror      = "1.0"

# Logging
log            = "0.4"
env_logger     = "0.11"

# IDs
uuid           = { version = "1.3", features = ["v4", "serde"] }

# Optional: Mesocarp lock-free primitives
mesocarp       = { path = "../../third_party/mesocarp", optional = true }

[build-dependencies]
# bindgen generates Rust FFI bindings from pyc_compiler C headers
bindgen        = "0.69"

[features]
default        = []
python_ext     = ["pyo3"]
mesocarp       = ["dep:mesocarp"]

[package.metadata.pyc]
# Path to libpyc_compiler.so — resolved at build time via build.rs
compiler_lib   = "../../build/compiler/libpyc_compiler.so"
compiler_include = "../../include"
